# avatardb

./: .gitignore
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/routers/: images.py
backend/app/services/: character_detection.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ImageList.tsx  ImageUpload.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/services/: api.ts
